syntax = "proto3";
package stockpb;

option go_package = "github.com/WlayRay/order-demo/common/genproto/stockpb";

import "orderpb/order.proto";

service StockService {
  rpc CheckIfItemsInStock(CheckIfItemsInStockRequest)
      returns (CheckIfItemsInStockResponse);
}

message CheckIfItemsInStockRequest {
  repeated orderpb.ItemWithQuantity Items = 1;
}

message CheckIfItemsInStockResponse {
  int32 InStock = 1;
  repeated orderpb.Item Items = 2;
}